add&fix:添加搜索好友功能
