# router/router.go
@@ -22,7 +22,7 @@ func Router() *gin.Engine {
 	r.GET("/toRegister", service.ToRegister)
 	r.GET("/toChat", service.ToChat)
 	r.GET("/chat", service.Chat)
-	//r.POST("/searchFriends", service.SearchFriends)
+	r.POST("/searchFriends", service.SearchFriends)
 
 	//用户模块
 	r.GET("/user/getUserList", service.GetUserList)
